--- a/css/components/_switchers.css
+++ b/css/components/_switchers.css
@@ -1,13 +1,11 @@
-    @import url(style.css);
-    
-    input[type="checkbox"].toggle {
+    input[type="checkbox"].switcher__input {
         opacity: 0;
         position: absolute;
         left: -9000px;
         top: -9000px;
     }
 
-    input[type="checkbox"].toggle+label {
+    input[type="checkbox"].switcher__input+.switcher__label {
         display: flex;
         align-items: center;
         position: relative;
@@ -15,7 +13,7 @@
         cursor: pointer;
     }
 
-    input[type="checkbox"].toggle+label::before {
+    input[type="checkbox"].switcher__input+.switcher__label::before {
         content: '';
 
         width: 2em;
@@ -29,7 +27,7 @@
         transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
     }
 
-    input[type="checkbox"].toggle+label::after {
+    input[type="checkbox"].switcher__input+.switcher__label::after {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -53,17 +51,17 @@
         transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
     }
 
-    input[type="checkbox"].toggle:focus + label::before{
+    input[type="checkbox"].switcher__input:focus + .switcher__label::before{
         outline: 2px solid black;
     }
 
-    input[type="checkbox"].toggle:checked+label::before {
+    input[type="checkbox"].switcher__input:checked+.switcher__label::before {
         content: '';
 
         background-color: hsl(100, 70%, 90%);
     }
 
-    input[type="checkbox"].toggle:checked + label::after {
+    input[type="checkbox"].switcher__input:checked + .switcher__label::after {
         /* content: '\2713'; */
         transform: translate(100%);
 
@@ -87,50 +85,3 @@
         content: '\2713';
     }
    }
-
-   body {
-    overflow: hidden;
-   }
-
-   .social_buttons {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   }
-
-   .social_buttons::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    bottom: 0;
-    z-index: 1;
-    backdrop-filter: blur(5px);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-   }
-
-   .social_buttons .social_buttons__fill {
-    position: absolute; 
-    filter: blur(150px);
-   }
-
-   .social_buttons__fill span:nth-child(1) {
-    background: #ff359b;
-    width: 500px;
-    height: 500px;
-    bottom: -150px;
-   } 
-
-   .social_buttons__fill span:nth-child(2) {
-    background: #00d2ff;
-    width: 500px;
-    height: 500px;
-    bottom: -150px;
-    left: 100px;
-   }
-
-   
