--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* baza */
+@import url(./root.css);
+@import url(./fonts.css);
 
-@import url(./_keyframes.css);
-@import url(./_switchers.css);
+/* Компоненти */
+@import url(./components/_keyframes.css);
+@import url(./components/_switchers.css);
+@import url(./components/_avatars.css);
+@import url(./components/social_buttons.css);
+
 
 * {
     box-sizing: border-box;
     font-family: 'Madimi One';
-}
-
-:root {
-    --body-bg: #123;
-    --nav-bg: rgb(69, 92, 115);
 }
 
 body {
@@ -108,62 +109,4 @@ body {
     text-decoration: none;
     position: relative;
     z-index: 10;
-}
-
-.avatars {
-    --avatar-count: 10;
-    --avatar-size: 70px;
-    --column-size: calc(var(--avatar-size) / 2);
-
-    --transition-duration: 500ms;
-
-    display: grid;
-    justify-content: center;
-    padding: 54px 0;
-    grid-template-columns: repeat(var(--avatar-count), var(--column-size));
-
-    transition: grid-template-columns var(--transition-duration);
-    transition-delay: var(--transition-duration);
-}
-
-.avatars:hover,
-.avatars:focus-within {
-    --column-size: calc(var(--avatar-size) * 1.5);
-    transition-delay: 0ms;
-}
-
-.avatars__image{
-    width: var(--avatar-size);
-
-    aspect-ratio: 1;
-    object-fit: cover;
-
-    transition: scale var(--transition-duration);
-}
-
-.avatars__image img {
-    width: var(--avatar-size);
-
-    aspect-ratio: 1;
-    object-fit: cover;
-
-    border-radius: 100vw;
-    border: 5px solid white;
-    box-shadow: .25rem .25rem .5rem hsl(0 0% 0% / .2);
-
-    transition: scale var(--transition-duration);
-}
-
-@supports selector(:has(+ *)) {
-.avatars__image:hover+.avatars__image img,
-.avatars__image:has(+ .avatars__image:hover) {
-    scale: 1.5;
-}
-}
-
-
-.avatars__image:hover,
-.avatars__image:focus {
-    scale: 2;
-    z-index: 2;
 }
