--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-/* главные */
+/* главные  */
+
 @import url(./core/keyframes.css);
 @import url(./core/fonts.css);
 @import url(./core/base.css);
-
 /* компоненты */
+
 @import url(./component/header.css);
 @import url(./component/aside.css);
 @import url(./component/main.css);
-@import url(./component/table.css);
+@import url(./component/table.css)
