--- a/css/component/aside.css
+++ b/css/component/aside.css
@@ -105,3 +105,42 @@
     inset: auto 50px auto 0;
     transform: translate(-60px);
 }
+
+.label__swither {
+    display: inline-block;
+
+    width: 62px;
+    height: 24px;
+
+    border-radius: 12px;
+    background: #bfbfbf;
+
+    z-index: 0;
+    padding: 0;
+    margin: 0;
+
+    border: none;
+
+    cursor: pointer;
+    position: relative;
+    transition-duration: 300ms;
+}
+
+.label__swither::before {
+    content: "";
+    height: 36px;
+    width: 36px;
+
+    border-radius: 18px;
+    background: #fff;
+    top: -6px;
+    left: -6px;
+
+    transition-duration: 300ms;
+
+    box-shadow: 0 0 10px 0 #999999;
+
+    position: absolute;
+    z-index: 1;
+}
+
