--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,4 @@
 @import url(./component/header.css);
 @import url(./component/main.css);
 @import url(./component/table.css);
+@import url(./component/switcher.css);
