--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,4 @@
 @import url(./component/main.css);
 @import url(./component/table.css);
 @import url(./component/switcher.css);
+@import url(./component/company.css);
