--- a/css/component/aside.css
+++ b/css/component/aside.css
@@ -1,15 +1,21 @@
 .aside {
+    position: relative;
     display: flex;
     flex-direction: column;
     grid-area: sidebar;
+
+    gap: var(--aside-gap);
+
     /* background-color: red; */
     /* border-right: 2px solid #999; */
-    position: relative;
 
     font-family: 'Varela Round';
 
-    height: 100vh;
-    width: 20vw;
+    min-height: 100vh;
+    min-width: 150px;
+
+    margin-right: 100px;
+    padding: 0 24px;
 }
 
 .aside::before {
@@ -22,125 +28,78 @@
 .aside__top {
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
+
     /* border: 2px solid black; */
 
     gap: 30px;
+    padding: 24px;
 
-    height: 10%;
-    width: 100%;
-}
-
-.company__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    background-color: aqua;
-    width: 60px;
-    height: 60px;
-
-    font-size: 24px;
-    font-weight: 600;
-
-    border-radius: 50%;
-}
-
-.compamy__text {
-    font-size: 30px;
+    min-height: 10%;
 }
 
 .aside__content {
     display: flex;
     flex-direction: column;
+    gap: var(--aside-gap)
 
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    /* justify-content: center;
+    align-items: center; */
 
-    gap: 65px;
+    /* gap: 65px; */
     /* border: 2px solid yellow; */
 }
 
 
 .aside__link {
-    display: flex;
-    justify-content: center;
+    position: relative;
+    display: inline-flex;
+
     align-items: center;
 
+    padding: 24px;
 
-    text-decoration: none;
-    color: #999;
-    
+    gap: 20px;
 
     font-size: 26px;
-    position: relative;
+    text-decoration: none;
+    color: #999;
 }
 
 .aside__link i {
-    position: absolute;
-    width: 200px;
+    /* position: absolute;
+    width: 200px; */
 }
 
-.aside__line {
+.aside__link.--line {
     border: 1px solid #999999ce;
-    width: 80%;
+
+    opacity: 40%;
+    width: 90%;
+
+    padding: 0;
+    margin: 0 auto;
+
+    cursor: unset;
 }
 
-.--is-active {
+.aside__link--is-active {
     color: #4170f4;
     position: relative;
 }
 
-.--is-active::before {
-    content: "";
+.aside__link--is-active::before {
     position: absolute;
+    inset: 50% auto auto 0;
 
     aspect-ratio: 1;
-
     width: 5px;
+
+    content: "";
+
     background-color: #4170f4;
     border-radius: 50%;
 
-    inset: auto 50px auto 0;
-    transform: translate(-60px);
-}
-
-.label__swither {
-    display: inline-block;
-
-    width: 62px;
-    height: 24px;
-
-    border-radius: 12px;
-    background: #bfbfbf;
-
-    z-index: 0;
-    padding: 0;
-    margin: 0;
-
-    border: none;
-
-    cursor: pointer;
-    position: relative;
-    transition-duration: 300ms;
-}
-
-.label__swither::before {
-    content: "";
-    height: 36px;
-    width: 36px;
-
-    border-radius: 18px;
-    background: #fff;
-    top: -6px;
-    left: -6px;
-
-    transition-duration: 300ms;
-
-    box-shadow: 0 0 10px 0 #999999;
-
-    position: absolute;
-    z-index: 1;
+    transform: translate(0px, -50%);
 }
 
