--- a/css/component/switcher.css
+++ b/css/component/switcher.css
@@ -1,20 +1,21 @@
 .switcher {
+    position: relative;
     display: inline-flex;
     align-items: center;
 }
 
-.switcher.--arg {
+.switcher.--mrg {
     margin: auto 0 auto auto;
 }
 
-input[type="checkbox"].switcher__input {
+.switcher__input {
     opacity: 0;
     position: absolute;
-    left: -9000px;
-    top: -9000px;
+
+    inset: 0;
 }
 
-input[type="checkbox"].switcher__input+.switcher__label {
+.switcher__input+.switcher__label {
     display: flex;
     align-items: center;
     position: relative;
@@ -22,13 +23,13 @@ input[type="checkbox"].switcher__input+.switcher__label {
     cursor: pointer;
 }
 
-input[type="checkbox"].switcher__input+.switcher__label::before {
+.switcher__input+.switcher__label::before {
     content: '';
 
     width: 2em;
     height: 1em;
 
-    background-color: hsla(0, 0%, 80%, 1);
+    background-color: hsl(0, 0%, 76.9%);
     border-radius: 1em;
 
     margin-right: .25em;
@@ -36,7 +37,7 @@ input[type="checkbox"].switcher__input+.switcher__label::before {
     transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
-input[type="checkbox"].switcher__input+.switcher__label::after {
+.switcher__input+.switcher__label::after {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,42 +54,38 @@ input[type="checkbox"].switcher__input+.switcher__label::after {
     width: 1.8em;
     height: 1.8em;
 
-    background-color: hsla(0, 0%, 100%, 1);
+    background-color: hsl(0, 0%, 96.1%);
     color: white;
     border-radius: 1em;
 
     transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
-input[type="checkbox"].switcher__input:focus + .switcher__label::before{
-    /* outline: 2px solid black; */
-}
-
-input[type="checkbox"].switcher__input:checked+.switcher__label::before {
+.switcher__input:checked+.switcher__label::before {
     content: '';
 
-    background-color: hsla(0, 0%, 0%, 1);
+    background-color: hsl(0, 0%, 4.3%);
 }
 
-input[type="checkbox"].switcher__input:checked + .switcher__label::after {
+.switcher__input:checked+.switcher__label::after {
     /* content: '\2713'; */
     transform: translate(29px);
 
-    background-color: hsla(0, 0%, 50%, 1);
+    background-color: hsl(0, 0%, 22.7%);
 
     animation: check-fade 200ms ease-in-out forwards;
 }
 
 @keyframes check-fade {
-0% {
-    opacity: 1;
-}
+    0% {
+        opacity: 1;
+    }
 
-50% {
-    opacity: 0;
-}
+    50% {
+        opacity: 0;
+    }
 
-100% {
-    opacity: 1;
-}
+    100% {
+        opacity: 1;
+    }
 }
