--- a/css/Components/toggle.css
+++ b/css/Components/toggle.css
@@ -2,7 +2,6 @@
     --toggle-size-round: 22px;
     --togle-circle-inset: calc(100% - var(--toggle-size-round) - 2px);
     --togle-circle-color: rgba(255, 255, 255, 1);
-    --toggle-icon-hidden-before: 1;
 
     position: relative;
 
@@ -23,9 +22,8 @@
     opacity: 0;
 }
 
-.toggle__circle::before {
+.toggle__circle {
     position: absolute;
-    content: '';
 
     inset: 50% var(--togle-circle-inset) auto auto;
     transform: translate(0, -50%);
@@ -33,24 +31,27 @@
     aspect-ratio: 1/1;
     width: var(--toggle-size-round);
 
-    background-color: var(--togle-circle-color);
     border-radius: 50%;
+    background-color: var(--togle-circle-color);
+    box-shadow: 0px 0px 1px 0px rgba(51, 51, 51, 0.25);
 
     transition: 0.5s ease-in-out;
     transition-property: inset, background-color;
 }
 
-.toggle__icon-1, .toggle__icon-2 {
+.toggle__icon {
     position: absolute;
+    inset: 50% auto auto 50%;
     
-    inset: 50% calc(var(--togle-circle-inset) + 3px) auto auto;
-    transform: translate(0, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 1;
 
-    transition: 0.5s ease-in-out;
+    opacity: var(--toggle-icon-opacity, 1);
+    transition: opacity 0.3s ease-in-out;
 }
 
-.toggle__icon-2 {
-    inset: 50% calc(var(--togle-circle-inset) + 4px) auto auto;
+.toggle__icon.--last {
+    opacity: var(--toggle-icon-opacity-last, 0);
 }
 
 .toggle:has(.toggle__input:checked) {
@@ -58,17 +59,7 @@
     --togle-circle-color: rgba(51, 51, 51, 1);
 
     background-color: rgba(98, 98, 98, 1);
-}
 
-.toggle__icon-1 {
-    opacity: var(--toggle-icon-hidden-before, 0);
-}
-
-.toggle__icon-2 {
-    opacity: var(--toggle-icon-hidden-after, 0);
-}
-
-.toggle:has(.toggle__input:checked) {
-    --toggle-icon-hidden-before: 0;
-    --toggle-icon-hidden-after: 1;
+    --toggle-icon-opacity: 0;
+    --toggle-icon-opacity-last: 1;
 }
