--- a/css/Components/task.css
+++ b/css/Components/task.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .container__buttons {
     display: inline-flex;
@@ -11,7 +11,9 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Platypi';
+
+    font-family: 'Roboto';
+    letter-spacing: -0.5px;
 
 
     width: 60px;
