--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,105 @@
-/* components */
-@import url(./Components/swithc.css);
-@import url(./Components/checkbox.css);
-@import url(./Components/tumbler.css);
-@import url(./Components/toggle.css);
-@import url(./Components/selector.css);
-@import url(./Components/complete.css);
-@import url(./Components/task.css);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+
+    
+    font-family: 'Poppins';
+}
 
 body {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
 
-    background: #4d2424;
+    min-height: 100vh;
+
+    background: rgb(83,114,239);
 }
 
-.container {
+:where(.btn) {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+}
+
+.container__tag {
+    width: 490px;
+
+    padding: 15px;
+
+    border-radius: 10px;
+    background-color: white;
+}
+
+.tag__tittle {
     display: flex;
-    flex-direction: column;
-    gap: 35px;
+    align-items: center;
+}
+
+.bxs-purchase-tag {
+    font-size: 20px;
+}
+
+.tag__tittle h2 {
+    margin-left: 8px;
+    font-size: 22px;
+
+    font-weight: 600;
+}
+
+.tag__content {
+    margin-top: 10px;
+}
+
+.tag__bages {
+    margin-top: 10px;
+
+    padding: 9px 16px;
+
+    border: 1px solid #666;
+    border-radius: 5px;
+}
+
+.tag__bages .btn {
+    padding: 5px 10px;
+    margin: 8px 2px 5px 0;
+
+    border-radius: 5px;
+    background-color: rgb(233, 233, 233);
+}
+
+.tag__bages svg {
+    position: relative;
+    top: 3px;
+
+    cursor: pointer;
+
+    margin-left: 8px;
+    padding: 3px;
+
+    border-radius: 50%;
+    background-color: #ccc;
+}
+
+.tag__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-top: 10px;
+}
+
+.btn.--bottom {
+    padding: 9px 15px;
+
+    color: #fff;
+    
+    cursor: pointer;
+
+    border-radius: 5px;
+    background-color: rgb(89, 122, 253);
 }
