--- a/css/style.css
+++ b/css/style.css
@@ -58,31 +58,41 @@ button {
 }
 
 .card-tags__bages {
-    gap: 8px;
-    margin-top: 10px;
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+
+    gap: 6px;
+
     padding: 9px 16px;
+
+    min-height: 100px;
 
     border: 1px solid #666;
     border-radius: 5px;
 }
 
-.card-tags__bages button {
-    display: flex;
-    flex-direction: row;
+.bages {
+    display: inline-flex;
+    align-items: center;
+
     gap: 8px;
 
     padding: 5px 10px;
-
-    /* margin: 8px 2px 5px 0; */
 
     border-radius: 5px;
     background-color: rgb(233, 233, 233);
 }
 
-.card-tags__bages svg {
-    padding: 2px;
+.bages button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 
-    width: 10px;
+    padding: 5px;
+
+    width: 17px;
+    aspect-ratio: 1;
 
     border-radius: 50%;
     background-color: #ccc;
