--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url(./components/_bages.css);
+@import url(./components/_footer.css);
+@import url(./components/_header.css);
+
+
 * {
     margin: 0;
     padding: 0;
@@ -55,64 +60,4 @@ button {
 .card-tags__top h2 {
     font-size: 22px;
     font-weight: 600;
-}
-
-.card-tags__bages {
-    display: flex;
-    align-content: flex-start;
-    flex-wrap: wrap;
-
-    gap: 6px;
-
-    padding: 9px 16px;
-
-    min-height: 100px;
-
-    border: 1px solid #666;
-    border-radius: 5px;
-}
-
-.bages {
-    display: inline-flex;
-    align-items: center;
-
-    gap: 8px;
-
-    padding: 5px 10px;
-
-    border-radius: 5px;
-    background-color: rgb(233, 233, 233);
-}
-
-.bages button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-
-    padding: 5px;
-
-    width: 17px;
-    aspect-ratio: 1;
-
-    border-radius: 50%;
-    background-color: #ccc;
-}
-
-.card-tags__bottom {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    margin-top: 10px;
-}
-
-.btn.--bottom {
-    padding: 9px 15px;
-
-    color: #fff;
-    
-    cursor: pointer;
-
-    border-radius: 5px;
-    background-color: rgb(89, 122, 253);
 }
