--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@import url(./components/_bages.css);
-@import url(./components/_footer.css);
-@import url(./components/_header.css);
+@import url(./components/_bages_main.css);
+@import url(./components/_bages_footer.css);
+@import url(./components/_bage);
 
 
 * {
@@ -31,33 +31,4 @@ button {
     background-color: transparent;
 
     cursor: pointer;
-}
-
-.card-tags {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-
-    width: 490px;
-
-    padding: 15px;
-
-    border-radius: 10px;
-    background-color: white;
-
-    & .bxs-purchase-tag {
-        font-size: 20px;
-    
-}
-}
-
-.card-tags__top {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.card-tags__top h2 {
-    font-size: 22px;
-    font-weight: 600;
 }
