--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
+/* @import url('./components/_card-tags.css');
+@import url('./components/_bage'); */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@import url(./components/_bages_main.css);
-@import url(./components/_bages_footer.css);
-@import url(./components/_bage);
-
 
 * {
     margin: 0;
@@ -31,4 +29,101 @@ button {
     background-color: transparent;
 
     cursor: pointer;
+}
+
+.card-tags {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    width: 490px;
+
+    padding: 15px;
+
+    border-radius: 10px;
+    background-color: white;
+
+    & .bxs-purchase-tag {
+        font-size: 20px;
+    
+}
+}
+
+.card-tags__top {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.card-tags__top h2 {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.card-tags__bages {
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+
+    gap: 6px;
+
+    padding: 9px 16px;
+
+    min-height: 100px;
+
+    border: 1px solid #666;
+    border-radius: 5px;
+}
+
+.bages {
+    display: inline-flex;
+    align-items: center;
+
+    gap: 8px;
+
+    padding: 5px 10px;
+
+    border-radius: 5px;
+    background-color: rgb(233, 233, 233);
+}
+
+.bages button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 5px;
+
+    width: 17px;
+    aspect-ratio: 1;
+
+    border-radius: 50%;
+    background-color: #ccc;
+}
+
+.card-tags__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-top: 10px;
+}
+
+.btn.--bottom {
+    padding: 9px 15px;
+
+    color: #fff;
+    
+    cursor: pointer;
+
+    border-radius: 5px;
+    background-color: rgb(89, 122, 253);
+}
+
+.button {
+    background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath d='M9.70704 8.29289L18 0L19.4142 1.41422L11.1213 9.7071L19.4142 18L18 19.4142L9.70704 11.1213L1.41422 19.4142L0 18L8.29283 9.7071L7.7486e-07 1.41421L1.41422 5.54323e-06L9.70704 8.29289Z' fill='currentColor' /%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    
+    aspect-ratio: 1;
+    
 }
