--- a/css/components/_bage.css
+++ b/css/components/_bage.css
@@ -1,19 +1,4 @@
-.card-tags__bages {
-    display: flex;
-    align-content: flex-start;
-    flex-wrap: wrap;
-
-    gap: 6px;
-
-    padding: 9px 16px;
-
-    min-height: 100px;
-
-    border: 1px solid #666;
-    border-radius: 5px;
-}
-
-.bages {
+.bage {
     display: inline-flex;
     align-items: center;
 
@@ -25,7 +10,7 @@
     background-color: rgb(233, 233, 233);
 }
 
-.bages button {
+.bage button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -37,23 +22,4 @@
 
     border-radius: 50%;
     background-color: #ccc;
-}
-
-.card-tags__bottom {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    margin-top: 10px;
-}
-
-.btn.--bottom {
-    padding: 9px 15px;
-
-    color: #fff;
-    
-    cursor: pointer;
-
-    border-radius: 5px;
-    background-color: rgb(89, 122, 253);
 }
