--- a/css/style1.css
+++ b/css/style1.css
@@ -5,7 +5,8 @@
     padding: 0;
     box-sizing: 0;
     
-    font-family: 'Poppins';
+
+    font-family: 'icon-mark';
 }
 
 body {
@@ -18,103 +19,68 @@ body {
     background: rgb(83,114,239);
 }
 
-.tag_container {
-    width: 490px;
-
-    background-color: white;
-    border-radius: 10px;
-
-    padding: 20px 25px; 
-}
-
-.tag_container :where(.tag__text , li, ul, i, .tag__bottom) {
+.container {
     display: flex;
-    align-items: center;
-}
-
-.tag__text {
-    display: flex;
-    align-items: center;
-}
-
-.tag__text i {
-    font-size: 20px;
-}
-
-.tag__text h2 {
-    font-size: 21px;
-    font-weight: 600;
-
-    margin-left: 4px;
-}
-
-.tag_content {
-    margin: 10px 0;
-}
-
-.tag_content p {
-    font-size: 15px;
-}
-
-.tag_content ul {
-    display: flex;
-
-    margin: 12px 0;
-    padding: 8px;
-
-    border-radius: 5px;
-    border: 1px solid #666;
-}
-
-.tag_content li {
-    list-style: none;
-
-    padding: 5px 8px 5px 10px;
-    margin: 4px 3px;
-
-    border-radius: 5px;
-    background-color: rgb(243, 243, 243);
-    border: 1px solid #a8a8a8;
-}
-
-.tag_content ul li i {
-    height: 20px;
-    width: 20px;
-    font-size: 20px;
-
-    cursor: pointer;
-   
-    margin-left: 8px;
-    color: #808080;
-
-    border-radius: 50%;
-    background: #e2e2e2;
-}
-
-.tag_content ul input {
-    flex: 1;
-    outline: none;
-    border: none;
-
-    padding: 10px;
-    font-size: 16px;
-}
-
-.tag__bottom {
-    justify-content: space-between;
-}
-
-.tag__bottom button {
-    border: none;
-    outline: none;
-
-    padding: 9px 15px;
+    flex-direction: column;
+    justify-content: center;
     
-    cursor: pointer;
+    width: 400px;
+    min-height: 400px;
 
-    font-size: 15px;
-    color: #fff;
+    background-color: rgba(180, 250, 0, 1);
+    box-shadow: 0px 0px 20px 0px rgba(66, 68, 90, 1);
+}
 
-    background: #5372F0;
-    border-radius: 5px;
+.icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+    width: 400px;
+
+    min-height: 50px;
+}
+
+.icons__ilon::before {
+    content: "\e900";
+}
+
+.icon__false:before {
+    content: "\e901";
+}
+
+.icon__figma:before {
+    content: "\e902";
+}
+
+.icon__figma-solid:before {
+    content: "\e903";
+}
+
+.icon__github:before {
+    content: "\e904";
+}
+
+.icon__github-solid:before {
+    content: "\e905";
+}
+
+.icon__inst:before {
+    content: "\e906";
+}
+
+.icon__inst-solid:before {
+    content: "\e907";
+}
+
+.icon__viber:before {
+    content: "\e908";
+}
+
+.icon__viber-solid:before {
+    content: "\e909";
+}
+
+.icons.--small {
+    font-size: 12px;
 }
