--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,7 @@
 
 /* components */
 
-@import url('./components/_card-tags.css');
-@import url('./components/_bage.css');
-@import url('./components/_button.css');
+@import url('./components/_checkbox.css');
 
 
 
