--- a/css/style1.css
+++ b/css/style1.css
@@ -6,7 +6,7 @@
     box-sizing: 0;
     
 
-    font-family: 'icon-mark';
+    font-family: 'mark-icon';
 }
 
 body {
@@ -19,68 +19,30 @@ body {
     background: rgb(83,114,239);
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.icons {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    /* gap: 10px; */
     
     width: 400px;
-    min-height: 400px;
+    padding: 48px;
 
     background-color: rgba(180, 250, 0, 1);
     box-shadow: 0px 0px 20px 0px rgba(66, 68, 90, 1);
 }
 
-.icons {
-    display: flex;
+.icons__icon {
+    display: inline-flex;
     align-items: center;
-    justify-content: space-between;
-    
-    width: 400px;
+    justify-content: center;
 
-    min-height: 50px;
+    width: 38px;
+    aspect-ratio: 1;
+
+    /* background-color: white; */
 }
 
-.icons__ilon::before {
-    content: "\e900";
-}
 
-.icon__false:before {
-    content: "\e901";
-}
-
-.icon__figma:before {
-    content: "\e902";
-}
-
-.icon__figma-solid:before {
-    content: "\e903";
-}
-
-.icon__github:before {
-    content: "\e904";
-}
-
-.icon__github-solid:before {
-    content: "\e905";
-}
-
-.icon__inst:before {
-    content: "\e906";
-}
-
-.icon__inst-solid:before {
-    content: "\e907";
-}
-
-.icon__viber:before {
-    content: "\e908";
-}
-
-.icon__viber-solid:before {
-    content: "\e909";
-}
-
-.icons.--small {
-    font-size: 12px;
+.icons__icon.--small {
+    font-size: 10px;
 }
