--- a/css/components/_checkbox.css
+++ b/css/components/_checkbox.css
@@ -1,14 +1,21 @@
 .checkbox {
     --checkbox-circle-size: 20px;
     --checkbox-circle-inset: calc(100% - var(--checkbox-circle-size));
+    --bg-color: white;
 
     position: relative;
 
-    width: 60px;
-    height: 20px;
+    display: inline-flex;
+    justify-content: center;
 
-    background-color: rgb(109, 0, 0);
+    width: calc(var(--checkbox-circle-size) * 3);
+    height: var(--checkbox-circle-size);
+
+    background-color: #B0B0B0;
     border-radius: 20px;
+    box-shadow: 0px 0px 5px 0px rgba(66, 68, 90, 1);
+
+    transition: background-color 0.5s ease-in-out;
 }
 
 .checkbox__input {
@@ -19,19 +26,26 @@
     opacity: 0;
 }
 
-.checkbox__label {
+.checkbox__label::before {
     position: absolute;
-    inset: 50% var(--checkbox-circle-inset) 0 0;
+    inset: 50% var(--checkbox-circle-inset) auto auto;
     transform: translate(0, -50%);
 
+    content: '\e90c';
 
-    width: (--checkbox-circle-size);
-    aspect-ratio: 1;
+    width: var(--checkbox-circle-size);
+    aspect-ratio: 1/1;
 
-    background-color: white;
+    background-color: var(--bg-color);
     border-radius: 50%;
+
+    transition: inset 0.5s ease-in-out;
 }
 
-.checkbox:has(.checkbox__label:checked) {
-    
+.checkbox:has(.checkbox__input:checked) {
+    --checkbox-circle-inset: 0%;
+
+    content: '\e90b';
+
+    background-color: #222222;
 }
