--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,40 @@ button {
     justify-content: center;
     width: 100vw;
 }
+
+
+
+@media screen and (min-height: 480px) and (max-height: 992px) {
+    .aside {
+        grid-area: 1/3;
+        position: absolute;
+        right: 0;
+
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center; 
+    }
+
+    .aside__content {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .line {
+        display: inline-flex;
+        justify-content: center;
+        border-top: 0.3px solid #ccc;
+        
+        margin: 25px 0 0 10px;
+    }
+
+    .aside__links {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; 
+        flex-direction: row;
+
+        gap: 10px;
+    }
+}
