--- a/css/style.css
+++ b/css/style.css
@@ -44,38 +44,43 @@ button {
 }
 
 
-
-@media screen and (min-height: 480px) and (max-height: 992px) {
-    .aside {
-        grid-area: 1/3;
-        position: absolute;
-        right: 0;
-
-
-        display: flex;
-        justify-content: space-between;
-        align-items: center; 
+@media (max-width: 480px) {
+    .menu {
+        display: grid;
+        grid-template-areas: 'main' 'aside';
     }
 
-    .aside__content {
+    .menu__aside {
         display: flex;
         flex-direction: row;
+
+        max-width: 100%;
+        height: 100%;
     }
 
-    .line {
-        display: inline-flex;
-        justify-content: center;
-        border-top: 0.3px solid #ccc;
-        
-        margin: 25px 0 0 10px;
-    }
-
-    .aside__links {
+    .menu__aside-content {
         display: flex;
-        justify-content: space-between;
-        align-items: center; 
-        flex-direction: row;
+        flex-direction: row; 
 
+        min-width: 75%;
+    }
+
+    .menu__aside-line {
+        border-right: 0.3px solid #ccc;
+        margin: 20px 10px 20px ;
+    }
+
+    .menu__aside-text-language {
+        margin: 0 0 0 10px;
+        text-align: center;
+    }
+
+    .menu__aside-language {
+        margin-left: 20px;
+    }
+
+    .menu__aside-links {
+        flex-direction: row;
         gap: 10px;
     }
 }
