--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -1,7 +1,7 @@
 .header {
     --header-logo-size: 190px;
     --header-spacer: 16px;
-    
+
     position: relative;
     display: flex;
     flex-direction: column;
@@ -52,7 +52,10 @@
     width: 100%;
     background-color: rgba(0, 0, 0, 1);
 
-    padding-left: var(--header-logo-size);
+    padding: 0 24px;
+    margin: 0 -24px;
+
+    padding-left: var(--header-logo-size) !important;
 
 }
 
