--- a/css/components/_home-support.css
+++ b/css/components/_home-support.css
@@ -1,4 +1,6 @@
 .home-support {
+    display: flex;
+
     min-height: 628px;
     width: 100%;
 
@@ -7,83 +9,52 @@
     background: url("../../img/bg.png") no-repeat center center / cover;
 }
 
-.home-support__block {
+.home-support__card {
     display: flex;
-    justify-content: flex-end;
-    
-    padding: 50px 10px;
-}
-
-.home-support__element {
-    display: flex;
-
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
-    background-color: rgba(255, 255, 255, .7);
+    text-align: center;
 
-    padding: 40px;
+    margin: auto 0 auto auto;
+    width: max-content;
+
 
     border: 2px solid black;
-}
+    padding: 60px 40px;
 
-.home-support__text {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: uppercase;
+    background-color: rgba(255, 255, 255, .7);
 
     & h2 {
         margin-bottom: 10px;
+        font-size: 20px;
+        font-weight: 700;
+        font-size: 26px;
+        text-transform: uppercase;
     }
 
     & p {
-        margin-bottom: 20px;
         font-weight: 600;
+        font-size: 16px;
         text-transform: none;
     }
 }
 
 .home-support__links {
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
+
+    grid-template-columns: 1fr 1fr;
+    /* repeat(2, 1fr) */
     gap: 10px;
 
-    margin-bottom: 20px;
+    margin: 20px 0;
 }
-
-.home-support__item {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-
-    padding: 10px 30px;
-
-    font-weight: 700;
-    font-size: 24px;
-    text-transform: uppercase;
-
-    background-color: white;
-}
-
-.home-support__item:nth-child(1) {
-    background-color: black;
-
-    & .home-support__link {
-        color: white;
-    }
-}
-
 
 .home-support__bottom {
     display: inline-flex;
     align-items: center;
-    gap: 6px;
+    gap: 3px;
 
     font-size: 17.5px;
     font-weight: 600;
@@ -91,6 +62,6 @@
 
 }
 
-.home-support__bottom span {
-    text-decoration-line: underline;
+.home-support__bottom a {
+    text-decoration: underline;
 }
